[gd_scene load_steps=10 format=2]

[ext_resource path="res://Means/Scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://Means/Sprites/Maps/mapa.png" type="Texture" id=2]
[ext_resource path="res://Means/Sprites/Maps/m9.png" type="Texture" id=3]
[ext_resource path="res://Means/Sprites/Maps/m10.png" type="Texture" id=4]
[ext_resource path="res://Means/Sprites/Maps/m11.png" type="Texture" id=5]
[ext_resource path="res://Means/Sprites/Maps/m12.png" type="Texture" id=6]
[ext_resource path="res://Means/Sprites/Maps/m13.png" type="Texture" id=7]
[ext_resource path="res://Means/Sprites/Maps/m8.png" type="Texture" id=8]
[ext_resource path="res://Means/Sprites/Maps/mU.png" type="Texture" id=9]

[node name="Map" type="StaticBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )

[node name="Map" type="Sprite" parent="." index="0"]

visible = false
scale = Vector2( 1.14223, 1.13574 )
texture = ExtResource( 2 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map2" type="Sprite" parent="." index="1"]

visible = false
scale = Vector2( 1.63559, 1.78679 )
texture = ExtResource( 3 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map3" type="Sprite" parent="." index="2"]

visible = false
scale = Vector2( 1.80161, 1.77238 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map4" type="Sprite" parent="." index="3"]

visible = false
scale = Vector2( 1.64241, 1.79664 )
texture = ExtResource( 5 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map5" type="Sprite" parent="." index="4"]

visible = false
scale = Vector2( 2.39808, 2.39422 )
texture = ExtResource( 6 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map6" type="Sprite" parent="." index="5"]

visible = false
scale = Vector2( 2.3889, 2.38221 )
texture = ExtResource( 7 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map7" type="Sprite" parent="." index="6"]

visible = false
scale = Vector2( 1.06518, 1.15265 )
texture = ExtResource( 8 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Map8" type="Sprite" parent="." index="7"]

visible = false
scale = Vector2( 1.66185, 1.79141 )
texture = ExtResource( 9 )
centered = false
region_rect = Rect2( 0, 0, 720, 1280 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="8"]

build_mode = 0
polygon = PoolVector2Array( -134.206, -2768.06, 926.69, -2755.72, 1390.13, 1287.35, 834.242, 969.106, 834.214, -285.455, -90.8293, -285.455, -91.2101, 937.194, -619.288, 1265.22 )


